--- a/.github/workflows/get-dependency-details.yml
+++ b/.github/workflows/get-dependency-details.yml
@@ -37,10 +37,6 @@ on:
         description: "A URL pointing to the workflow run"
         value: ${{ jobs.get-dependency-details.outputs.url }}
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
 
   get-dependency-details:
@@ -68,6 +64,13 @@ jobs:
               if [ "${{ inputs.skip-version-json-check }}" = true ]; then
                 echo "No JSON payload given with repo ${{ inputs.repo }}, and skip-version-json-check flag is set. Exiting."
                 exit 0
+              elif ! [[ -e version.json ]]; then
+                # For the set-metadata workflow to be sufficiently generalized,
+                # the skip-version-json-check flag cannot be set for amalgam or howso-engine,
+                # even if the current repository does not have a version.json. Thus, kindly
+                # exit if a version.json does not exist.
+                echo "Current repository does not have a version.json"
+                exit 0
               fi
               echo "No JSON payload given with repo ${{ inputs.repo }}, using version.json"
               ID=$(jq -r '.dependencies."${{ inputs.repo }}"' version.json)
@@ -83,8 +86,9 @@ jobs:
               echo "Found release build"
               echo "run-type=$(echo "release")" >> $GITHUB_OUTPUT
               # Set metadata (sha, url)
-              head_sha=$(gh release view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json targetCommitish | jq '.targetCommitish')
-              url=$(gh release view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json url | jq '.url')
+              details=$(gh release view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json targetCommitish,url)
+              head_sha=$(echo "$details" | jq '.targetCommitish')
+              url=$(echo "$details" | jq '.url')
               echo "head-sha=$(echo "$head_sha")" >> $GITHUB_OUTPUT
               echo "url=$(echo "$url")" >> $GITHUB_OUTPUT
           elif gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} "$ID" > /dev/null 2>&1; then
@@ -92,10 +96,11 @@ jobs:
               echo "Found non-release build"
               echo "run-type=$(echo "run")" >> $GITHUB_OUTPUT
               # Set metadata (build date, title, sha, url)
-              build_date=$(gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json createdAt | jq '.createdAt')
-              build_title=$(gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json displayTitle | jq '.displayTitle')
-              head_sha=$(gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json headSha | jq '.headSha')
-              url=$(gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json url | jq '.url')
+              details=$(gh run view --repo ${{ inputs.owner }}/${{ inputs.repo }} $ID --json createdAt,displayTitle,headSha,url)
+              build_date=$(echo "$details" | jq '.createdAt')
+              build_title=$(echo "$details" | jq '.displayTitle')
+              head_sha=$(echo "$details" | jq '.headSha')
+              url=$(echo "$details" | jq '.url')
               echo "build-date=$(echo "$build_date")" >> $GITHUB_OUTPUT
               echo "build-title=$(echo "$build_title")" >> $GITHUB_OUTPUT
               echo "head-sha=$(echo "$head_sha")" >> $GITHUB_OUTPUT
